@@ -1,0 +1,4 @@
+{-# LANGUAGE TypeFamilies #-}
+module FamilyVarid where
+
+f family forall = undefined
