@@ -91,6 +91,7 @@ module Language.Haskell.Exts.Annotated.Syntax (
     -- ** Special identifiers
     as_name, qualified_name, hiding_name, minus_name, bang_name, dot_name, star_name,
     export_name, safe_name, unsafe_name, threadsafe_name, stdcall_name, ccall_name,
+    forall_name, family_name,
     -- ** Type constructors
     unit_tycon_name, fun_tycon_name, list_tycon_name, tuple_tycon_name, unboxed_singleton_tycon_name,
     unit_tycon, fun_tycon, list_tycon, tuple_tycon, unboxed_singleton_tycon,
@@ -1079,13 +1080,16 @@ bang_name      l = Symbol l "!"
 dot_name       l = Symbol l "."
 star_name      l = Symbol l "*"
 
-export_name, safe_name, unsafe_name, threadsafe_name, stdcall_name, ccall_name :: l -> Name l
+export_name, safe_name, unsafe_name, threadsafe_name, 
+  stdcall_name, ccall_name, forall_name, family_name :: l -> Name l
 export_name     l = Ident l "export"
 safe_name       l = Ident l "safe"
 unsafe_name     l = Ident l "unsafe"
 threadsafe_name l = Ident l "threadsafe"
 stdcall_name    l = Ident l "stdcall"
 ccall_name      l = Ident l "ccall"
+forall_name     l = Ident l "forall"
+family_name     l = Ident l "family"
 
 unit_tycon_name, fun_tycon_name, list_tycon_name, unboxed_singleton_tycon_name :: l -> QName l
 unit_tycon_name l = unit_con_name l
